# opm-ai

./: .env.example  .gitignore  .gitmodules  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docker/: Dockerfile  docker-compose.yml
opm_ai/builder/: __init__.py  builder.py  models.py
opm_ai/builder/templates/: base.j2
opm_ai/chat/: __init__.py  app.py  llm_router.py  providers.py  system_prompt.md  themes.py  tools.py
opm_ai/linter/: __init__.py  linter.py  models.py  rules.py
opm_ai/postprocess/: __init__.py  kpi_extractor.py  models.py  plot_engine.py  resinsight_bridge.py
opm_ai/preprocess/: __init__.py  models.py  pvt_builder.py  pvt_correlations.py  pvt_models.py  pvt_tables.py
opm_ai/runner/: __init__.py  models.py  runner.py
tests/: test_builder.py  test_chat_infra.py  test_linter.py  test_postprocess.py  test_preprocess.py  test_pvt_builder.py  test_runner.py  test_smoke.py
