[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "opm-ai"
version = "0.1.0"
description = "AI layer on top of OPM Flow for educational reservoir simulation"
requires-python = ">=3.10"
license = {text = "GPL-3.0"}

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["opm_ai*"]
