[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "opm-ai"
version = "0.1.0"
description = "AI layer on top of OPM Flow for educational reservoir simulation"
requires-python = ">=3.10"
license = {text = "GPL-3.0"}
dependencies = [
    "groq>=0.9.0",
    "openai>=1.0.0",
    "langchain>=0.2.0",
    "langchain-community>=0.2.0",
    "chromadb>=0.5.0",
    "llama-index>=0.10.0",
    "tavily-python>=0.3.0",
    "ecl2df>=0.18.0",
    "rips>=2025.4.0",
    "pydantic>=2.0.0",
    "jinja2>=3.1.0",
    "streamlit>=1.35.0",
    "pandas>=2.0.0",
    "numpy>=1.26.0",
    "plotly>=5.20.0",
    "matplotlib>=3.8.0",
    "python-dotenv>=1.0.0",
    "loguru>=0.7.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["opm_ai*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
