[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "opm-ai"
version = "0.1.0"
description = "AI layer on top of OPM Flow for educational reservoir simulation"
requires-python = ">=3.12"
license = {text = "GPL-3.0"}
dependencies = [
    # LLM providers
    "groq>=0.9.0",
    "openai>=1.0.0",
    # AI / RAG stack
    "langchain>=0.2.0",
    "langchain-community>=0.2.0",
    "chromadb>=0.5.0",
    "llama-index>=0.10.0",
    "tavily-python>=0.3.0",
    # OPM / Eclipse result reading
    # NOTE: ecl2df is NOT listed here — it hard-requires resdata<4 which is
    #       Python <3.12 only and therefore incompatible with Ubuntu 24.04.
    # resdata 5.x supports Python 3.12 and 3.13.
    "resdata>=5.0.0",
    "resfo>=4.4",
    # ResInsight Python API (pip install rips)
    "rips>=2025.4.0",
    # Core
    "pydantic>=2.0.0",
    "jinja2>=3.1.0",
    "streamlit>=1.35.0",
    "pandas>=2.0.0",
    "numpy>=1.26.0",
    "plotly>=5.20.0",
    "matplotlib>=3.8.0",
    "python-dotenv>=1.0.0",
    "loguru>=0.7.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "pytest-cov>=5.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["opm_ai*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
